<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/phonetev"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="8"
    		android:gravity="right"
    		android:textColor="@color/pink"
            android:text="@string/phone_tev" />
         <Button
            android:id="@+id/phonebutclear"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="myclick"
            android:text="@string/phone_butclear" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/phonebut1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:onClick="myclick"
            android:text="@string/phone_but1" />

        <Button
            android:id="@+id/phonebut2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:onClick="myclick"
            android:text="@string/phone_but2" />

        <Button
            android:id="@+id/phonebut3"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:onClick="myclick"
            android:text="@string/phone_but3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/phonebut4"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:onClick="myclick"
            android:text="@string/phone_but4" />

        <Button
            android:id="@+id/phonebut5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:onClick="myclick"
            android:text="@string/phone_but5" />

        <Button
            android:id="@+id/phonebut6"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:onClick="myclick"
            android:text="@string/phone_but6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/phonebut7"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:onClick="myclick"
            android:text="@string/phone_but7" />

        <Button
            android:id="@+id/phonebut8"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:onClick="myclick"
            android:text="@string/phone_but8" />

        <Button
            android:id="@+id/phonebut9"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:onClick="myclick"
            android:text="@string/phone_but9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/phonebuta"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:onClick="myclick"
            android:text="@string/phone_buta" />

        <Button
            android:id="@+id/phonebut0"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:onClick="myclick"
            android:text="@string/phone_but0" />

        <Button
            android:id="@+id/phonebutb"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:onClick="myclick"
            android:text="@string/phone_butb" />
    </LinearLayout>

     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <Button
        android:id="@+id/phonecall"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/phone_call" />
	</LinearLayout>
</LinearLayout>